--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "flowbite-react patch"
+    "lint": "next lint"
   },
   "dependencies": {
-    "flowbite-react": "^0.11.8",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -23,7 +21,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "flowbite-typography": "^1.0.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
