Convert to static site

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+public/images/nextImageExportOptimizer
+public/images/next-image-export-optimizer-hashes.json
+public/nextImageExportOptimizer
+# Local Netlify folder
+.netlify
